--- a/todo.cfg
+++ b/todo.cfg
@@ -13,6 +13,10 @@ export REPORT_FILE="$TODO_DIR/report.txt"
 export TODO_ACTIONS_DIR="$HOME/.todo.actions.d"
 # for hey.rb
 export HEY_CYCLE=7
+# for the note
+# Note file extension
+export TODO_NOTE_EXT=.md
+export EDITOR=vim
 
 # == EDIT FILE LOCATIONS ABOVE ===
 
