--- a/todo.cfg
+++ b/todo.cfg
@@ -10,7 +10,8 @@ export DONE_FILE="$TODO_DIR/done.txt"
 export REPORT_FILE="$TODO_DIR/report.txt"
 
 # You can customize your actions directory location
-export TODO_ACTIONS_DIR="$HOME/.todo.actions.d"
+export TODO_ACTIONS_DIR="/home/yezhaoliang/.todo.actions.d/"
+
 # for hey.rb
 export HEY_CYCLE=7
 # for the note
@@ -30,23 +31,23 @@ export EDITOR=vim
 ## the defaults in the COLORS section below. Otherwise, todo.txt
 ## will still use the defaults!
 
-export BLACK='\\033[0;30m'
+##export BLACK='\\033[0;30m'
 export RED='\\033[0;31m'
 export GREEN='\\033[0;32m'
-export BROWN='\\033[0;33m'
-export BLUE='\\033[0;34m'
+##export BROWN='\\033[0;33m'
+##export BLUE='\\033[0;34m'
 export PURPLE='\\033[0;35m'
-export CYAN='\\033[0;36m'
-export LIGHT_GREY='\\033[0;37m'
-export DARK_GREY='\\033[1;30m'
-export LIGHT_RED='\\033[1;31m'
-export LIGHT_GREEN='\\033[1;32m'
+##export CYAN='\\033[0;36m'
+##export LIGHT_GREY='\\033[0;37m'
+##export DARK_GREY='\\033[1;30m'
+##export LIGHT_RED='\\033[1;31m'
+##export LIGHT_GREEN='\\033[1;32m'
 export YELLOW='\\033[1;33m'
 export LIGHT_BLUE='\\033[1;34m'
-export LIGHT_PURPLE='\\033[1;35m'
-export LIGHT_CYAN='\\033[1;36m'
+##export LIGHT_PURPLE='\\033[1;35m'
+##export LIGHT_CYAN='\\033[1;36m'
 export WHITE='\\033[1;37m'
-export DEFAULT='\\033[0m'
+##export DEFAULT='\\033[0m'
 #
 # === COLORS ===
 
@@ -60,13 +61,14 @@ export DEFAULT='\\033[0m'
 export PRI_A=$YELLOW        # color for A priority
 export PRI_B=$GREEN         # color for B priority
 export PRI_C=$LIGHT_BLUE    # color for C priority
-export PRI_D=...            # define your own
+#export PRI_D=...            # define your own
+export PRI_D=$PURPLE           # define your own
 export PRI_X=$WHITE         # color unless explicitly defined
 #
 # There is highlighting for tasks that have been done,
 # but haven't been archived yet.
 #
-export COLOR_DONE=$LIGHT_GREY
+#export COLOR_DONE=$LIGHT_GREY
 
 # === BEHAVIOR ===
 
